Complete fix of type sections so headers won't break at smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -643,7 +643,8 @@ iframe{
     width: 35%;
     height: auto;
     float: left;
-    margin: 100px;
+    margin-top: 70px;
+    margin-left: 100px;
 }
 #type-links{
     color: rgb(24, 70, 71);
@@ -660,7 +661,8 @@ iframe{
     width: 30%;
     height: 550px;
     float: right;
-    margin: 100px;
+    margin-top: 70px;
+    margin-right: 100px;
     border: 3px solid rgb(43, 92, 104);
 }
 .logo{
